fix(EntityList): prevent wrapping on zoom
related to OPT-3221

--- a/client/src/modules/components/EntityList/EntityList.scss
+++ b/client/src/modules/components/EntityList/EntityList.scss
@@ -66,6 +66,7 @@
 
   .ListItem {
     position: relative;
+    white-space: nowrap;
 
     > ul {
       margin-left: -25px;
